--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,40 @@
 <footer>
-    <div class="footer-container">
-        <ul>
-            <div class="footer-links">
-                <li>
-                    <a href="https://www.11ty.dev/" target="_blank" rel="noopener noreferrer">
-                        Made with 11ty
-                    </a>
-                </li>
-                <li>
-                    <a href="https://slandath.github.io" target="_blank" rel="noopener noreferrer">
-                        My Website
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.github.com/slandath" target="_blank" rel="noopener noreferrer">
-                        My Github
-                    </a>
-                </li>
-            </div>
-            <li>
-                <p id="copyright">
-                    Copyright &copy; {{ "now" | date: "%Y" }} Tom Slanda
-                </p>
-            </li>
-        </ul>
-    </div>
+  <div class="footer-container">
+    <ul>
+      <div class="footer-links">
+        <li>
+          <a
+            href="https://www.11ty.dev/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Made with 11ty
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://slandath.github.io"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            My Website
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.github.com/slandath"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            My Github
+          </a>
+        </li>
+      </div>
+      <li>
+        <p id="copyright">
+          Copyright &copy; {{ "now" | date: "%Y" }} Tom Slanda
+        </p>
+      </li>
+    </ul>
+  </div>
 </footer>
