--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,21 +1,24 @@
 <nav>
-    <div class="nav-container">
-        <a href="/"><img class="image-container width-100 aspect-ratio-1-1"
-                src="https://raw.githubusercontent.com/slandath/images/2400c16b6d6bb233068157dc627de04dd85c8f7d/coffee/logo.svg"
-                alt="logo" /></a>
-        <button class="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </button>
-        <ul class="nav-links">
-            <li><a href="/">Home</a></li>
-            <li><a href="/recipes">Recipes</a></li>
-            <li><a href="/brands">Brands</a></li>
-            <li><a href="/equipment">Equipment</a></li>
-            <li><a href="/resources">Resources</a></li>
-            <li><a href="/shops">Shops</a></li>
-            <li><a href="/blog">Blog</a></li>
-        </ul>
-    </div>
+  <div class="nav-container">
+    <a href="/"
+      ><img
+        class="image-container width-100 aspect-ratio-1-1"
+        src="https://raw.githubusercontent.com/slandath/images/2400c16b6d6bb233068157dc627de04dd85c8f7d/coffee/logo.svg"
+        alt="logo"
+    /></a>
+    <button class="hamburger">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </button>
+    <ul class="nav-links">
+      <li><a href="/">Home</a></li>
+      <li><a href="/recipes">Recipes</a></li>
+      <li><a href="/brands">Brands</a></li>
+      <li><a href="/equipment">Equipment</a></li>
+      <li><a href="/resources">Resources</a></li>
+      <li><a href="/shops">Shops</a></li>
+      <li><a href="/blog">Blog</a></li>
+    </ul>
+  </div>
 </nav>
