--- a/shops/victors.liquid
+++ b/shops/victors.liquid
@@ -12,9 +12,18 @@ website: /shops/victors
 <h1>Victor&#39;s Celtic Coffee</h1>
 <p>About a mile away from the Microsoft campus in Downtown Redmond is a small coffee roaster called Victor&#39;s Celtic Coffee.  Even though it&#39;s been almost 15 years since my last visit, I still think about their espresso.  I love this place and I hope it is still around the next time I visit Seattle.</p>
 <h2>Location Info</h2>
-<p>7993 Gilman St, Redmond, WA 98052  </p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2686.508729446133!2d-122.12455852360311!3d47.67453937119611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549072b21e0c25fd%3A0x68c462f6024d53bc!2sVictor&#39;s%20Celtic%20Coffee%20%26%20Roasters!5e0!3m2!1sen!2sus!4v1699920286026!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<p>7993 Gilman St, Redmond, WA 98052
+</p>
+<iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2686.508729446133!2d-122.12455852360311!3d47.67453937119611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549072b21e0c25fd%3A0x68c462f6024d53bc!2sVictor&#39;s%20Celtic%20Coffee%20%26%20Roasters!5e0!3m2!1sen!2sus!4v1699920286026!5m2!1sen!2sus"
+  width="400"
+  height="300"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 <h2>Website</h2>
-<p><a href="https://victorscelticcoffee.com/">Victor&#39;s Celtic Coffee</a></p>
-
+<p>
+  <a href="https://victorscelticcoffee.com/">Victor&#39;s Celtic Coffee</a>
+</p>
