--- a/shops/vita.liquid
+++ b/shops/vita.liquid
@@ -12,9 +12,18 @@ website: /shops/vita
 <h1>Caffe Vita</h1>
 <p>One afternoon, I had a couple of hours to burn in Downtown Seattle.  I had a taste for cup of coffee and I ducked into one of Caffe Vita&#39;s locations.  I had tried their coffee in restaurants around town, but this my first time visiting one of their shops.  It was everything I have ever wanted in a coffee shop</p>
 <h2>Location Info</h2>
-<p>1005 E. Pike St, Seattle, WA 98122 </p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.6262750386973!2d-122.3216060237486!3d47.61395618746971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906acc4738cf25%3A0xeff18719160ca666!2sCaff%C3%A9%20Vita!5e0!3m2!1sen!2sus!4v1700770736963!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<p>1005 E. Pike St, Seattle, WA 98122
+</p>
+<iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.6262750386973!2d-122.3216060237486!3d47.61395618746971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906acc4738cf25%3A0xeff18719160ca666!2sCaff%C3%A9%20Vita!5e0!3m2!1sen!2sus!4v1700770736963!5m2!1sen!2sus"
+  width="600"
+  height="450"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 <h2>Website</h2>
-<p><a href="https://www.caffevita.com/">Caffe Vita</a></p>
-
+<p>
+  <a href="https://www.caffevita.com/">Caffe Vita</a>
+</p>
