--- a/_includes/layouts/default.html
+++ b/_includes/layouts/default.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Eleventy description" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content="Eleventy" />
-    <link rel="icon" href="https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/big-cup.png" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/big-cup.png"
+    />
     <link rel="stylesheet" href="/main.css" />
     <title>{{title | default: "Tom's Coffee Blog"}}</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="grid-container">
-        {% include navbar.html %}
-        {{content}}
-        {% include footer.html %}
+      {% include navbar.html %} {{content}} {% include footer.html %}
     </div>
-</body>
-<script src="/script.js">
-
-</script>
-
+  </body>
+  <script src="/script.js"></script>
 </html>
