--- a/main.css
+++ b/main.css
@@ -33,7 +33,9 @@ body {
 
 footer {
   background-color: var(--brown);
-  box-shadow: rgba(9, 30, 66, 0.25) 0px -4px 8px -2px, rgba(9, 30, 66, 0.08) 0px -1px 0px 1px;
+  box-shadow:
+    rgba(9, 30, 66, 0.25) 0px -4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px -1px 0px 1px;
   margin: 0;
   text-align: center;
 }
@@ -54,7 +56,8 @@ input {
 
 nav {
   background-color: var(--brown);
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+  box-shadow:
+    rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
     rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   padding: 1rem;
 }
@@ -77,7 +80,8 @@ nav {
   background: var(--white);
   border-radius: 0.5rem;
   border: 1px solid var(--espresso);
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+  box-shadow:
+    rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
     rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   width: 200px;
   height: 250px;
@@ -215,7 +219,8 @@ p {
   background-color: var(--white);
   border-radius: 0.5rem;
   border: 1px solid var(--espresso);
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+  box-shadow:
+    rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
     rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
